--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-69">
+<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-70">
 <meta name="apple-mobile-web-app-title" content="Bernio">
 <title>Bernio</title>
 <style>
@@ -244,7 +244,7 @@ body.exam-on .calc{
       <button class="key num" data-ins="8"><span class="main">8</span></button>
       <button class="key num" data-ins="9"><span class="main">9</span></button>
       <button class="key pink" data-act="del"><span class="legend">INS</span><span class="main">DEL</span></button>
-      <button class="key pink soft" data-act="ac"><span class="main">AC</span></button>
+      <button class="key pink" data-act="ac"><span class="main">AC</span></button>
 
       <button class="key num" data-ins="4"><span class="main">4</span></button>
       <button class="key num" data-ins="5"><span class="main">5</span></button>
@@ -2662,6 +2662,7 @@ function endExamScan(){   QR.start('END'); }
 </script>
 </body>
 </html>
+
 
 
 
