--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     --fn:#2a3b4f;  --fn-text:#f7fbff;  
     --pink:#f0a9ba; --pink2:#f4c5d0; --oval:#e8edf3; --shift:#ffd447; --alpha:#ff6b6b;  
     --gap:10px; --r:18px; --shadow:0 2px 0 rgba(0,0,0,.35);  
+    --segfont: "DSEG7", "DS-Digital", "Digital-7", ui-monospace, Menlo, Consolas, monospace;
   }  
   *{box-sizing:border-box}  
   html,body{height:100%;margin:0;overflow:hidden}  
@@ -37,11 +38,11 @@
   width:100%;  
   margin:0; padding:0;  
 }  
-.modebar .label{  
-  font-size:clamp(24px,6.2vw,33px); /* stejná jako zadávání */  
-  line-height:1.15;  
-  margin:0; padding:0;  
-}  
+.modebar .label{
+  font-size:clamp(30px,8vw,42px); /* zarovnáme se s #exprWrap */
+  line-height:1.10;
+  margin:0; padding:0;
+}
 .modebar .label:nth-child(1){ justify-self:start; }  
 .modebar .label:nth-child(2){ justify-self:center; }  
 .modebar .label:nth-child(3){ justify-self:end; }  
@@ -65,7 +66,7 @@
   text-align:initial;  
   margin-left:0;  
   min-width:100%;  
-  height:1.34em;       /* stejná FIXNÍ výška jako běžný výsledek */  
+  height:1.2em;       /* stejná FIXNÍ výška jako běžný výsledek */  
   overflow:hidden;  
 }  
   
@@ -95,17 +96,19 @@ body.exam-on .calc{
   background: linear-gradient(var(--exam-c1, #ffe8f2), var(--exam-c2, #ffdbe8));  
 }  
   
-.display{  
-  background:var(--lcd); color:var(--lcd-text); border-radius:10px;  
-  padding:12px 14px; box-shadow:inset 0 3px 4px rgba(0,0,0,.25);  
-  font-family:ui-monospace,Menlo,Consolas,monospace;  
-  display:grid; grid-template-rows:auto auto; gap:0px; /* menší mezera */  
-  position:relative;  
-}  
+.display{
+  background:var(--lcd); color:var(--lcd-text); border-radius:10px;
+  padding:10px 12px; /* bylo 12px 14px -> menší svislé okraje */
+  box-shadow:inset 0 3px 4px rgba(0,0,0,.25);
+  font-family:var(--segfont); /* segmentové písmo + fallbacky */
+  display:grid; grid-template-rows:auto auto; gap:0; /* žádná mezera mezi řádky */
+  position:relative;
+}
+
 #exprWrap{  
-  font-size:clamp(26px,7vw,36px);  /* o kousek větší než dřív */  
-  line-height:1.28;  
-  min-height:1.46em;  
+  font-size:clamp(30px,8vw,42px);  /* o kousek větší než dřív */  
+  line-height:1.15;  
+  min-height:1.2em;  
   white-space:nowrap;  
   overflow:hidden;  
   position:relative;  
@@ -113,7 +116,7 @@ body.exam-on .calc{
   
   #expr{display:block; width:100%; white-space:nowrap; padding-right:8px;}  
   
-  .line2{display:flex; align-items:center; gap:8px; min-height:1.34em}  
+  .line2{display:flex; align-items:center; gap:8px; min-height:1.20em}  
   
   .badges{  
     position:absolute; top:4px; left:8px; right:8px;  
@@ -132,11 +135,11 @@ body.exam-on .calc{
   align-items:center;  
   justify-content:flex-end;       /* výsledek vpravo (mimo MODE) */  
   margin-left:auto;  
-  font-size:clamp(26px,7.2vw,36px);  
-  line-height:1.2;  
+  font-size:clamp(30px,7.8vw,42px);  
+  line-height:1.1;  
   font-weight:700;  
   min-width:40%;  
-  height:1.34em;                  /* FIXNÍ výška řádku výsledku */  
+  height:1.2em;                  /* FIXNÍ výška řádku výsledku */  
   overflow:hidden;                /* nic nevyleze ven */  
 }  
   
