--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-79">
+<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-80">
 <meta name="apple-mobile-web-app-title" content="Bernio">
 <title>Bernio</title>
 <style>  
@@ -2408,7 +2408,7 @@ function applyDecSepToStr(s){
   const e=Math.floor(Math.log10(Math.abs(x)));
   const E=Math.floor(e/3)*3;
   const m=x/10**E;
-  let mant = stripZeros(m.toPrecision(9));
+  let mant = stripZeros(m.toPrecision(10));
   if (state.decSep===',') mant = mant.replace(/\./g, ',');
   return `<span class="sci">${mant}<span class="times">×</span><span class="ten">10</span><sup class="exp">${E}</sup></span>`;
 }
@@ -2417,11 +2417,11 @@ function toScientificAuto(x){
   if(x===0) return '0';
   let e = Math.floor(Math.log10(Math.abs(x)));
   let m = x / 10**e;
-  let mant = stripZeros(m.toPrecision(9));
+  let mant = stripZeros(m.toPrecision(10));
   if(Math.abs(+mant) >= 10){
     e += 1;
     m /= 10;
-    mant = stripZeros(m.toPrecision(9));
+    mant = stripZeros(m.toPrecision(10));
   }
   if (state.decSep===',') mant = mant.replace(/\./g, ',');
   return `<span class="sci">${mant}<span class="times">×</span><span class="ten">10</span><sup class="exp">${e}</sup></span>`;
@@ -2595,12 +2595,49 @@ if (ax < smallCut || ax >= bigCut) return toScientificAuto(x);
   return formatDecimalFitting(x, want, /*preferSciWhenNoFrac=*/true);
 }
 
+// === MAX 10 číslic na výsledkovém řádku (bez znamení, oddělovače a exponentu) ===
+function limitDigits10(rendered, value){
+  // Pokud je vědecký zápis (naše HTML <span class="sci">...), vygeneruj 10 platných číslic
+  if (typeof rendered === 'string' && /class="sci"/.test(rendered)) {
+    return toScientificSig(+value, 10);
+  }
+
+  // Jinak je to "obyčejný" zápis (celé/decimální): spočítat číslice a případně zkrátit
+  const countDigits = s => (s||'').replace(/[^\d]/g,'').length;
+  let out = String(rendered);
+  if (countDigits(out) <= 10) return out;
+
+  // kolik má celá část číslic
+  const intDigits = Math.trunc(Math.abs(+value)).toString().length || 1;
+
+  // kolik desetinných míst můžeme nechat, aby celkem bylo <= 10 číslic
+  let keep = Math.max(0, 10 - intDigits);
+
+  // zkusit s tolika desetinnými místy
+  let s = toFixedSep(+value, keep);
+  let d = countDigits(s);
+
+  // kdyby po zaokrouhlení stále přetékalo (např. 9.999… -> 10.000… zvýší intDigits),
+  // krokově snižuj, a když už to nejde, spadni do SCI s 10 platnými číslicemi
+  while (d > 10 && keep > 0){
+    keep -= 1;
+    s = toFixedSep(+value, keep);
+    d = countDigits(s);
+  }
+  if (d > 10) {
+    // fallback – vědecký s 10 signifikantními
+    return toScientificSig(+value, 10);
+  }
+  return s;
+}
+
 function updateResultView(){
   if(!state.lastRes){ state.resultStr=''; state.resultShown=false; render(); return; }
- if(state.lastRes.type==='num'){
+ if (state.lastRes.type === 'num'){
   const body = formatNumWithOptions(state.lastRes.v);
-  state.resultStr = body + (state.percentSuffix || '');
-}
+  const limited = limitDigits10(body, state.lastRes.v);
+  state.resultStr = limited + (state.percentSuffix || '');
+ }
   else if(state.lastRes.type==='pair'){ state.resultStr = `(${formatNumWithOptions(state.lastRes.a)}, ${formatNumWithOptions(state.lastRes.b)})`; }
   state.resultShown=true; render();
 }
